<resources>
    <string name="app_name">Walmart app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password (required)</string>
    <string name="email_address">Email address (required)</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="walmart_app_logo">walmart app logo</string>
</resources>